--- a/VRChat/26/1054926.html
+++ b/VRChat/26/1054926.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RenNdb1YqVyTyhU+s0OQOUWGrYg25Tqs4i+RyKKyC3Y="></script>
+    "yPdlHI3MG1urdq5wCY/mCShL+3p9T5GZVJ6WB4MRaCE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カボチャのカゴ【VRChat向け】","description":"ハロウィンのためのカボチャのかごです\nサブスタもなく、自分のアバター用に作っていたのでポリゴンが多く色々雑です...\n\nー製品内容ー\nFBXデータ(ポリゴン数818)\nテクスチャデータ(png)\n\n以下規約に従った上で、ご自由にお使いください！\n改変、商用利用は可です！\n\nー利用規約ー\n当データの著作権は製作者である白亜重工(白雪)に帰属します\n●禁止事項\n当データ(改変した場合も含む)の再配布、転載\n●免責事項\n当データを使用して発生したトラブルに一切の責任を製作者は負いません\nご利用は自己責任でお願いします\n","url":"https://booth.pm/ja/items/1054926","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1054926/754b3bc3-fe1a-4be4-8828-14029985a15c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RenNdb1YqVyTyhU+s0OQOUWGrYg25Tqs4i+RyKKyC3Y="></script>
+    nonce="yPdlHI3MG1urdq5wCY/mCShL+3p9T5GZVJ6WB4MRaCE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1054926/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               174
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1054926/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               174
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
