--- a/VRChat/76/1376676.html
+++ b/VRChat/76/1376676.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pEywKl5o+hEK6yYPqc+6Rau6PKkIiSbaRS6ii7uErHw="></script>
+    "LgjNhWmKzCjrKZOnS2iZvvaKb7vgKBYwM6/TMRGlYYc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"たこ焼き器","description":"タコパしようぜ！\nたこ焼き器です。\n一応おまけのたこ焼きも付属します。\nアニメーション、ボーンはありません。\nVRchat内のインテリア等にお使いください。","url":"https://booth.pm/ja/items/1376676","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/87a9af3a-c3dc-4a7a-b884-8e43079184aa/i/1376676/c22a7a68-f7d4-4569-be51-8b8aa5f9c3a0_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pEywKl5o+hEK6yYPqc+6Rau6PKkIiSbaRS6ii7uErHw="></script>
+    nonce="LgjNhWmKzCjrKZOnS2iZvvaKb7vgKBYwM6/TMRGlYYc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1376676/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1376676/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
