--- a/VRChat/44/1297944.html
+++ b/VRChat/44/1297944.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Wr0FpOcmcJvbxwOhGI42UpYs3TAEwOZILe6WSGuZSBY="></script>
+    "Pp7347cvu8aBnG9nPgymxgrcoZvzdm9qWki8p+GHOHM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】都合の良いおじいさん「つごおじ」3Dモデル","description":"人数が足りないなぁって時に便利なVroid製クローンの都合の良いおじいさんモデル\nすらっとした足と高身長を活かして武器としても使いやすく。\n1時間で作られた荒々しい仕上がり。関節は飛び服は破けます\n\n--------------------------------------\n☆バージョン2.0を追加いたしました\n2.0はVRMモデルのみです。(リムライトを変更)\n--------------------------------------\n\n△19968(Vroid表示)\n\nVRMモデルとおまけでPMXモデルが付属しています。\n\n無料版も支援版も変わらずVRMモデルはVR活動等で商用利用して頂いて構いません。\n\n動画などで使用する際はこちらのチャンネルを紹介してくださるとありがたいです！\nhttps://www.youtube.com/channel/UCM4gVizQmXcVDOBhRlUXobA\n\nVRchat使用時はツールなどで変換してお使いください\n\nVroidHubでも「都合の良いおじいさん「つごおじ」」として公開しております。","url":"https://booth.pm/ja/items/1297944","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9b100eac-a33c-4924-9906-fa7d502df195/i/1297944/b15ba5d5-9cdf-4d39-8261-e9fac7c3c544_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Wr0FpOcmcJvbxwOhGI42UpYs3TAEwOZILe6WSGuZSBY="></script>
+    nonce="Pp7347cvu8aBnG9nPgymxgrcoZvzdm9qWki8p+GHOHM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1297944/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1297944/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
